--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
+    "@gsap/react": "^2.1.2",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.2",
@@ -26,6 +27,7 @@
     "firebase": "^11.2.0",
     "flowbite-react": "^0.10.2",
     "gapi-script": "^1.2.0",
+    "gsap": "^3.12.7",
     "react": "^18.3.1",
     "react-apexcharts": "^1.7.0",
     "react-dom": "^18.3.1",
